<resources>
    <string name="app_name">American Football Score Tracker</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="description">NFL Logo</string>
    <string name="team_a_score">0</string>
    <string name="team_b_score">0</string>
    <string name="touchdown">Touchdown +6</string>
    <string name="field_goal">Field goal +3</string>
    <string name="two_point_conversion">Two point conversion +2</string>
    <string name="safety">Safety +2</string>
    <string name="extra_point">Extra point +1</string>
    <string name="reset">Reset</string>

</resources>
